--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,21 +1,23 @@
 ---
 dependency:
-  name: galaxy
   enabled: false
 driver:
   name: vagrant
   provider:
     name: virtualbox
-lint:
-  name: yamllint
 platforms:
-  - name: stretch
-    box: debian/stretch64
+  - name: buster
+    box: debian/buster64
     interfaces:
       - network_name: private_network
         auto_config: true
         ip: 172.16.100.12
         type: static
+lint: |
+  set -e
+  yamllint -c molecule/default/.yamllint .
+  ansible-lint --exclude roles/ --exclude molecule/ --exclude library/
+  flake8 --exclude roles,molecule,library
 provisioner:
   name: ansible
   playbooks:
@@ -31,17 +33,11 @@ provisioner:
         static_ip: 172.16.100.12
         gateway: 10.0.2.2
         netmask: 255.255.255.0
-        hostname: stretch
+        hostname: buster
         network_interface: eth1
-  env:
-    ANSIBLE_ROLES_PATH: ../../../../roles
-  lint:
-    name: ansible-lint
 scenario:
   name: default
 verifier:
   name: testinfra
   options:
     sudo: true
-  lint:
-    name: flake8
