--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,10 +1,18 @@
 ---
 - name: Prepare
   hosts: all
-  gather_facts: true
+  gather_facts: false
   tasks:
-    - name: Set root password
+    - name: Bootstrap python for Ansible
+      raw: |
+        command -v python3 python || (
+        command -v apk >/dev/null && sudo apk add --no-progress --update python3 ||
+        (test -e /usr/bin/dnf && sudo dnf install -y python3) ||
+        (test -e /usr/bin/apt && (apt -y update && apt install -y python-minimal)) ||
+        (test -e /usr/bin/yum && sudo yum -y -qq install python3) ||
+        (test -e /usr/sbin/pkg && sudo env ASSUME_ALWAYS_YES=yes pkg update && sudo env ASSUME_ALWAYS_YES=yes pkg install python3) ||
+        (test -e /usr/sbin/pkg_add && sudo /usr/sbin/pkg_add -U -I -x python%3.7) ||
+        echo "Warning: Python not boostrapped due to unknown platform."
+        )
       become: true
-      user:
-        name: root
-        password: $6$FxtnEqQoM1b$Gg7hirHNZGgBrKUQy4nH1g6wVnwPs1lEbe0OKI5o0cYtoubKhQG87ez.U.e2tOV9p1SJE0MJDikHEIkb2GDZJ0  # vagrant
+      changed_when: false
